--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
       padding: 5px 12px;
       border: 1px solid white;
       font-weight: 800;
+      border-radius: 4px;
     }
 
     .text-pub {
@@ -62,6 +63,57 @@
     .img-name {
       margin-left: 20px;
       font-weight: 800;
+    }
+
+    .foot-img{
+      width:50px;
+      height: 50px;
+    }
+
+    @media (min-width: 415px) and (max-width:539px) {
+        .card {
+        max-width: 330px;
+        margin: 21vh auto;
+        height: 58vh;
+        background-color: hsl(0, 0%, 100%);
+        border-radius: 20px;
+        box-shadow: 10px 10px hsl(0, 0%, 7%);
+      }
+
+       .para1 {
+        font-size: 16px;
+      }
+    }
+
+
+     @media (min-width: 381px) and (max-width:414px) {
+        .card {
+        max-width: 330px;
+        margin: 21vh auto;
+        height: 58vh;
+        background-color: hsl(0, 0%, 100%);
+        border-radius: 20px;
+        box-shadow: 10px 10px hsl(0, 0%, 7%);
+      }
+
+       .para1 {
+        font-size: 16px;
+      }
+    }
+
+
+    @media (max-width: 380px) {
+      .card {
+        max-width: 315px;
+        margin: 21vh auto;
+        height: 58vh;
+        background-color: hsl(0, 0%, 100%);
+        border-radius: 20px;
+        box-shadow: 10px 10px hsl(0, 0%, 7%);
+      }
+      .para1 {
+        font-size: 16px;
+      }
     }
   </style>
 </head>
